--- a/application/views/scripts/genero/index.phtml
+++ b/application/views/scripts/genero/index.phtml
@@ -17,7 +17,6 @@
                 <td><?= $genero['gen_id'] ?></td>
                 <td><?= $genero['gen_nome'] ?></td>
                 <td><?= $genero['fam_id'] ?></td>
-
                 <td class="td-botao">
                     <a href="<?= $this->url(array("controller" => "genero", "action" => "editar", "id" => $genero['gen_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -25,11 +24,13 @@
                         </ul>
                     </a>
                 </td>
-
                 <td class="td-botao">
-                    <input type="button" value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "genero", "action" => "excluir", "id" => $genero['gen_id']), null, true) ?>')">
+                    <a onclick="beforeDelete('<?= $this->url(array("controller" => "genero", "action" => "excluir", "id" => $genero['gen_id']), null, true) ?>')">
+                        <ul id="icons" class="ui-widget ui-helper-clearfix">
+                            <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                        </ul>
+                    </a>
                 </td>
-
             </tr>
         <?php endforeach; ?>
     </table>
