--- a/application/views/scripts/isca/index.phtml
+++ b/application/views/scripts/isca/index.phtml
@@ -31,8 +31,8 @@
     <fieldset class="noEditable"><legend>Iscas:</legend>
         <fieldset class="noEditable"><legend>Adicionar Isca:</legend>
             <div id="base">
-                <input type="button" name="Add" id="add" class="button-confirm" onclick="ajax_post();">
-                <input type="button" name="Reload" class="button-clear" onclick="jsReloadIsca(this.form)">
+                <input type="button" name="Add" id="add" class="busca" value="Adicionar" onclick="ajax_post();">
+                <input type="button" name="Reload" class="busca" value="Limpar campos" onclick="jsReloadIsca(this.form)">
 
                 <input type="text" name="inputIsc_tipo" id="inputIsc_tipo" placeholder="Tipo de isca" size="40"  />
                 <input readonly="" type="text" name="inputIsc_id" />
