--- a/application/views/scripts/ordem/index.phtml
+++ b/application/views/scripts/ordem/index.phtml
@@ -20,7 +20,6 @@
                 <td><?= $ordem['ord_nome'] ?></td>
                 <td><?= $ordem['ord_caracteristica'] ?></td>
                 <td><?= $ordem['grp_id'] ?></td>
-
                 <td class="td-botao">
                     <a href="<?= $this->url(array("controller" => "ordem", "action" => "editar", "id" => $ordem['ord_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -28,11 +27,13 @@
                         </ul>
                     </a>
                 </td>
-
                 <td class="td-botao">
-                    <input type="button" value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "ordem", "action" => "excluir", "id" => $ordem['ord_id']), null, true) ?>')">
+                    <a onclick="beforeDelete('<?= $this->url(array("controller" => "ordem", "action" => "excluir", "id" => $ordem['ord_id']), null, true) ?>')">
+                        <ul id="icons" class="ui-widget ui-helper-clearfix">
+                            <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                        </ul>
+                    </a>
                 </td>
-
             </tr>
         <?php endforeach; ?>
     </table>
