--- a/application/views/scripts/porto/index.phtml
+++ b/application/views/scripts/porto/index.phtml
@@ -18,7 +18,6 @@
                 <td><?= $porto['pto_id'] ?></td>
                 <td><?= $porto['pto_nome'] ?></td>
                 <td><?= $porto['pto_local'] ?></td>
-
                 <td class="td-botao">
                     <a href="<?= $this->url(array("controller" => "porto", "action" => "editar", "id" => $porto['pto_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -26,11 +25,13 @@
                         </ul>
                     </a>
                 </td>
-
                 <td class="td-botao">
-                    <input type="button" value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "porto", "action" => "excluir", "id" => $porto['pto_id']), null, true) ?>')">
+                    <a onclick="beforeDelete('<?= $this->url(array("controller" => "porto", "action" => "excluir", "id" => $porto['pto_id']), null, true) ?>')">
+                        <ul id="icons" class="ui-widget ui-helper-clearfix">
+                            <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                        </ul>
+                    </a>
                 </td>
-
             </tr>
         <?php endforeach; ?>
     </table>
