--- a/application/views/scripts/tempo/index.phtml
+++ b/application/views/scripts/tempo/index.phtml
@@ -15,7 +15,6 @@
             <tr>
                 <td><?= $tempo['tmp_id'] ?></td>
                 <td><?= $tempo['tmp_estado'] ?></td>
-
                 <td class="td-botao">
                     <a href="<?= $this->url(array("controller" => "tempo", "action" => "editar", "id" => $tempo['tmp_id']), null, true) ?>">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -23,11 +22,13 @@
                         </ul>
                     </a>
                 </td>
-
                 <td class="td-botao">
-                    <input type="button" value="Excluir" onclick="beforeDelete('<?= $this->url(array("controller" => "tempo", "action" => "excluir", "id" => $tempo['tmp_id']), null, true) ?>')">
+                    <a onclick="beforeDelete('<?= $this->url(array("controller" => "tempo", "action" => "excluir", "id" => $tempo['tmp_id']), null, true) ?>')">
+                        <ul id="icons" class="ui-widget ui-helper-clearfix">
+                            <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                        </ul>
+                    </a>
                 </td>
-
             </tr>
         <?php endforeach; ?>
     </table>
