--- a/public/css/estilo-admin.css
+++ b/public/css/estilo-admin.css
@@ -210,7 +210,7 @@ body{
 
 #botao-ancora, input[type=submit]{
     font-size: 11px;
-    margin-bottom: 10px;
+    //margin-bottom: 10px;
 }
 
 table {
