--- a/application/views/scripts/tipo-casco/index.phtml
+++ b/application/views/scripts/tipo-casco/index.phtml
@@ -1,13 +1,13 @@
 <h2>Desembarque -> Cascos das Embarcações</h2>
-<form method="post">
+<form method="post" id="tipo-casco">
 <fieldset id="dadosEmbarcacao"></fieldset>
 
     <a id="antipo-cascoa_tipo-casco"></a>
     <fieldset class="noEditable"><legend>Cascos das Embarcações:</legend>
         <fieldset class="noEditable"><legend>Adicionar Cascos das Embarcações:</legend>
             <div id="base">
-                <input type="button" name="Add" class="button-confirm" onclick="jsInsertDynamic(this.form, '<?= $this->url(array("controller" => "tipo-casco", "action" => "insert"), null, true) ?>', '<?= $this->url(array("controller" => "tipo-casco", "action" => "update"), null, true) ?>')">
-                <input type="button" name="Reload" class="button-clear" onclick="jsReloadDynamic(this.form)">
+                <input type="button" name="Add" class="busca" value="Adicionar" onclick="jsInsertDynamic(this.form, '<?= $this->url(array("controller" => "tipo-casco", "action" => "insert"), null, true) ?>', '<?= $this->url(array("controller" => "tipo-casco", "action" => "update"), null, true) ?>')">
+                <input type="button" name="Reload" class="busca" value="Limpar campos" onclick="jsReloadDynamic(this.form)">
 
                 <input type="text" name="input_valor" placeholder="Cascos" size="40"  />
                 <input readonly="" type="text" name="input_id" />
@@ -18,22 +18,31 @@
         <table id="tblPerfil">
             <tr>
                 <th width="15%">ID </th>
-                <th width="65%">Cascos</th>
-                <th width="5%"></th>
-                <th width="5%"></th>
+                <th width="85%">Cascos</th>
             </tr>
             <?php foreach ($this->assignTipoCasco as $key => $dados): ?>
                 <tr id="rowNumPeril<?= $key ?>">
                     <td><?= $dados['tcas_id'] ?></td>
                     <td><?= $dados['tcas_tipo'] ?></td>
-                    <td><input type="button" class="button-edit" width="5%" onclick="jsUpdateDynamic('<?= $dados['tcas_id'] ?>', '<?= $dados['tcas_tipo'] ?>', this.form)"></td>
-                    <td><input type="button" class="button-del" width="5%" onclick="jsDeleteDynamic(<?= $dados['tcas_id'] ?>, '<?= $this->url(array("controller" => "tipo-casco", "action" => "delete"), null, true) ?>')"></td>
+                    <td class="td-botao">
+                        <a onclick="jsUpdateDynamic('<?= $dados['tcas_id'] ?>', '<?= $dados['tcas_tipo'] ?>', document.getElementById('tipo-casco'))">
+                            <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
+                            </ul>
+                        </a>
+                    </td>
+                    <td class="td-botao">
+                        <a onclick="jsDeleteDynamic(<?= $dados['tcas_id'] ?>, '<?= $this->url(array("controller" => "tipo-casco", "action" => "delete"), null, true) ?>')">
+                            <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
+                            </ul>
+                        </a>
+                    </td>
                 </tr>
             <?php endforeach; ?>
         </table>
     </fieldset>
     <fieldset class="noBorder">
-        <br><input type="button" class="button-up" width="5%" onclick="scrollTo('top')">
         <a href="<?= $this->url(array("controller" => "tipo-casco", "action" => "relatorio"), null, true) ?>" id="botao-antipo-cascoa" target="_blank">Gerar Relatório - Lista</a>
     </fieldset>
 </form>
