--- a/application/views/scripts/especie/tableespc.phtml
+++ b/application/views/scripts/especie/tableespc.phtml
@@ -108,7 +108,7 @@
             <td><?= $entrevista['spc_quantidade'] ?></td>
             <td><?= $entrevista['spc_peso_kg'] ?></td>
             <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['lin_id'] ?></td>
+            <td><?= $entrevista['lf_id'] ?></td>
 
             </a>
             </tr>
