--- a/application/views/scripts/relatorios/index.phtml
+++ b/application/views/scripts/relatorios/index.phtml
@@ -9,7 +9,7 @@
 <div id="titulos">
     <h2>Relatórios</h2>
 </div>
-<form action="<?= $this->url(array("controller" => "relatorios", "action" => "gerar"), null, true) ?>">
+<form action="<?= $this->url(array("controller" => "relatorios", "action" => "gerar"), null, true) ?>" target="_blank" method="post">
     <div class="esquerda">
     <fieldset>
         <legend>Entrevistas:</legend>
