ajuste de CSS na view de entrevista de calao

--- a/application/views/scripts/calao/editar.phtml
+++ b/application/views/scripts/calao/editar.phtml
@@ -106,13 +106,13 @@
             <div class="direita-entrevista">
                 <div class="form-dir">    
                     <label>Número de Lances:</label>
-                    <input type="text"  name="numLances" placeholder="Lances" value="<?=$this->entrevista['cal_numlances']?>"/><br />
+                    <input type="text" class="numlances" name="numLances" placeholder="Lances" value="<?=$this->entrevista['cal_numlances']?>"/><br />
                 </div>
                 <div class="form-dir">    
                     <label>Malha:</label>
-                    <input type="text" class="tamanho" name="malha2" placeholder="malha" value="<?=$this->entrevista['cal_malha2']?>"/>
-                    <input type="text" class="tamanho" name="malha1" placeholder="malha" value="<?=$this->entrevista['cal_malha1']?>"/>
-                    <input type="text"  class="tamanho" name="malha" placeholder="malha" value="<?=$this->entrevista['cal_malha']?>"/>
+                    <input type="text" class="tamanhoMalha" name="malha2" placeholder="malha" value="<?=$this->entrevista['cal_malha2']?>"/>
+                    <input type="text" class="tamanhoMalha" name="malha1" placeholder="malha" value="<?=$this->entrevista['cal_malha1']?>"/>
+                    <input type="text" class="tamanhoMalha" name="malha" placeholder="malha" value="<?=$this->entrevista['cal_malha']?>"/>
                     
                 </div>
             </div><br/>
